--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "cookie": "^0.6.0"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.8",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.30",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
