--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "web:dev": "npm --prefix apps/web run dev",
+    "web:build": "npm --prefix apps/web run build",
+    "web:lint": "npm --prefix apps/web run lint"
+  },
   "dependencies": {
     "@upstash/redis": "^1.28.4",
     "@vercel/blob": "^0.25.1",
