--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,18 +1,26 @@
 {
+  "name": "web",
+  "private": true,
   "scripts": {
-    "web:dev": "npm --prefix apps/web run dev",
-    "web:build": "npm --prefix apps/web run build",
-    "web:lint": "npm --prefix apps/web run lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@upstash/redis": "^1.28.4",
     "@vercel/blob": "^0.25.1",
-    "cookie": "^0.6.0"
+    "cookie": "^0.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "@types/estree": "^1.0.8",
-    "@types/json-schema": "^7.0.15",
-    "@types/json5": "^0.0.30",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
