--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,9 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
     "eslint": "^9.35.0",
