--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "cookie": "^0.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "@tanstack/react-query": "^5.59.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
