--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "@tanstack/react-query": "^5.59.0"
+    "@tanstack/react-query": "^5.59.0",
+    "@heroicons/react": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
