--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,13 @@
     "@upstash/redis": "^1.28.4",
     "@vercel/blob": "^0.25.1",
     "cookie": "^0.6.0",
+    "@headlessui/react": "^2.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "@tanstack/react-query": "^5.59.0",
-    "@heroicons/react": "^2.1.5"
+    "@heroicons/react": "^2.1.5",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
