--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,9 +28,14 @@
     "autoprefixer": "^10.4.20",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
+    "@eslint/js": "^9.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "globals": "^15.12.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14"
   }
