--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,35 +8,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
+    "@tanstack/react-query": "^5.59.0",
     "@upstash/redis": "^1.28.4",
     "@vercel/blob": "^0.25.1",
+    "clsx": "^2.1.1",
     "cookie": "^0.6.0",
-    "@headlessui/react": "^2.1.10",
+    "pako": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "@tanstack/react-query": "^5.59.0",
-    "@heroicons/react": "^2.1.5",
-    "clsx": "^2.1.1"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.3",
-    "tailwindcss": "^3.4.14",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
-    "@eslint/js": "^9.13.0",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^15.12.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   }
 }
