--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,9 @@
 {
   "name": "web",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
