--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@vercel/blob": "^0.25.1",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
+    "jszip": "^3.10.1",
     "pako": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
