--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
@@ -16,7 +17,6 @@
     "@tanstack/react-query": "^5.59.0",
     "@upstash/redis": "^1.28.4",
     "@vercel/blob": "^0.25.1",
-    "jszip": "^3.10.1",
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "jszip": "^3.10.1",
@@ -43,6 +43,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vitest": "^1.6.1"
   }
 }
