--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -24,5 +24,11 @@
         { "key": "Content-Type", "value": "application/manifest+json; charset=utf-8" }
       ]
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/receive-cleanup",
+      "schedule": "0 15 * * *"
+    }
   ]
 }
