--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie": "^0.6.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/estree": "^1.0.8",
     "@types/json-schema": "^7.0.15",
     "@types/json5": "^0.0.30",
