--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -10,6 +10,32 @@
   ],
   "headers": [
     {
+      "source": "/api/auth/discord/callback",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; object-src 'none'; script-src 'self' 'unsafe-inline' https://esm.sh; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://cdn.discordapp.com https://media.discordapp.net https://public.blob.vercel-storage.com https://blob.vercel-storage.com https://*.blob.vercel-storage.com; media-src 'self' blob: https://public.blob.vercel-storage.com https://blob.vercel-storage.com https://*.blob.vercel-storage.com; connect-src 'self' https://public.blob.vercel-storage.com https://blob.vercel-storage.com https://*.blob.vercel-storage.com; font-src 'self' data:; frame-src 'self' blob:; worker-src 'self' blob:; manifest-src 'self'; upgrade-insecure-requests"
+        },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
+      ]
+    },
+    {
+      "source": "/((?!api/auth/discord/callback).*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'self'; object-src 'none'; script-src 'self' https://esm.sh; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://cdn.discordapp.com https://media.discordapp.net https://public.blob.vercel-storage.com https://blob.vercel-storage.com https://*.blob.vercel-storage.com; media-src 'self' blob: https://public.blob.vercel-storage.com https://blob.vercel-storage.com https://*.blob.vercel-storage.com; connect-src 'self' https://public.blob.vercel-storage.com https://blob.vercel-storage.com https://*.blob.vercel-storage.com; font-src 'self' data:; frame-src 'self' blob:; worker-src 'self' blob:; manifest-src 'self'; upgrade-insecure-requests"
+        },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" }
+      ]
+    },
+    {
       "source": "/sw.js",
       "headers": [
         { "key": "Cache-Control", "value": "no-cache" },
